--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
 * {
-  outline: 1px solid rgba(0, 255, 0, 0.3); }
+  outline: 1px solid rgba(0, 255, 0, 0.3);
+  font-family: "Montserrat"; }
 
 header {
   position: relative;
-  z-index: 100; }
+  z-index: 100;
+  margin: 50px 0; }
 
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
 section {
@@ -24,10 +26,9 @@ section {
   display: table;
   opacity: 1; }
 
-.content {
+.content, .middle-structure-info {
   display: table-cell;
-  vertical-align: middle;
-  background: rgba(0, 0, 0, 0.1); }
+  vertical-align: middle; }
 
 .middle-structure {
   background-color: #f00;
@@ -36,17 +37,37 @@ section {
   position: absolute;
   top: 0;
   left: 0;
-  display: table; }
+  display: table;
+  padding: 30px; }
 
-.lainfo-red {
-  display: table-cell;
-  vertical-align: middle; }
+.-about {
+  background: #0b1026; }
+
+.-skills {
+  background: rgba(88, 175, 169, 0.8); }
+
+.-projects {
+  background: #73d0b5; }
+
+.-about h2, .-skills h2 {
+  font-family: "Abril Fatface";
+  font-size: 60px;
+  letter-spacing: 3px; }
+
+.hor {
+  display: block;
+  width: 70px;
+  margin: 25px 0; }
+
+/******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
+.menu-line {
+  box-sizing: border-box; }
 
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome {
   background: url(../images/1rst%20demo%20city.jpeg); }
 
-hr {
+.vertical {
   width: 2px;
   background: #fff;
   box-sizing: content-box;
