--- a/laprueba.css
+++ b/laprueba.css
@@ -2,7 +2,8 @@
 $absolute:absolute;
 $table:table;
 $table-cell:table-cell;
-$margin-titles: 100px 0; 
+$margin-titles: 100px 0;
+
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
 *{
     outline: 1px solid rgba(0,255,0,0.3);
@@ -14,6 +15,9 @@ header{
     margin: 50px 0;
 }
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
+.info-projects{
+    background: #fff;
+}
 section{
     background: #000;
     /*background: rgba(0,0,0,0.3);*/
@@ -42,7 +46,7 @@ section{
     top: 0;
     left: 0;
     display: $table;
-    padding: 30px;
+    padding: 0 30px;
 }
 .-about{
     background: rgb(11,16,38);
@@ -64,8 +68,33 @@ section{
     margin: 25px 0;
 }
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
-.menu-line{
+.menu-navigation-number{
     box-sizing: border-box;
+    background:#fff; 
+    color:#000;
+}
+.middle-structure-right{
+    background-color: #f2f2f2;
+    width: 50%;
+    height: 100%;
+    position: $absolute;
+    top: 0;
+    right: 0;
+    display: $table;
+    overflow: hidden;
+    color: #000;
+}
+.menu-navigation-number{
+    width: 60px;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+.menu-navigation-number li{
+    padding: 30px 0;
+}
+.projects li{
+    padding: 30px 0;
 }
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome{
