--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,18 @@ $margin-titles: 100px 0;
 header{
     position: relative;
     z-index: 100;
-    margin: 50px 0;
+    margin: 10px 0;
+}
+.btn_press{
+   background-color: rgba(0,0,0,0.0);
+    border-radius: none;
+    border: 1px solid #fff;
+    padding: 12px 15px;
+    margin-left: 25px;
+}
+.btn_press:hover{
+    background-color: #fff;
+    color:rgba(69,60,179,0.9);
 }
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
 .info-projects{
@@ -49,17 +60,20 @@ section{
     padding: 0 30px;
 }
 .-about{
-    background: rgb(11,16,38);
+    background: rgb(69,60,179);
 }
 .-skills{
-    background:  rgba(88,175,169,0.8);
+    background:  rgb(69,60,179);
 }
 .-projects{
-    background:  rgb(115,208,181);
+    background:  rgb(69,60,179);
 }
-.-about h2, .-skills h2{
+.-contacts{
+    background:  rgb(69,60,179);
+}
+.-about h2, .-skills h2, .-projects h2{
     font-family: "Abril Fatface";
-    font-size: 60px;
+    font-size: 50px;
     letter-spacing: 3px;
 }
 .hor{
@@ -86,16 +100,30 @@ section{
 }
 .menu-navigation-number{
     width: 60px;
-    position: relative;
     margin: 0;
     padding: 0;
 }
 .menu-navigation-number li{
     padding: 30px 0;
 }
+.menu-navigation-number li:nth-child(1){
+    margin-top: 0;
+}
 .projects li{
     padding: 30px 0;
 }
+.img-projects-github{
+    margin: 25px;
+}
+.layer img{
+    transition:box-shadow 2s, transform 250ms, filter 250ms ease-in-out;
+}
+.layer img:hover{
+    transform: scale(1.02);
+    box-shadow: 1px 1px 8px rgba(0,0,0,0.6);
+}
+/******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
+
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome{
     background: url(../images/1rst%20demo%20city.jpeg);
@@ -111,4 +139,12 @@ section{
     display: inline-block;
     font-size: 45px;
     font-family: "Alegreya", "serif";
+}
+/******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
+@media screen and (max-width:600px)
+{
+    .middle-structure{
+        width: 100%;
+        z-index: 3;
+    } 
 }
