--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
+/**********timeliner************/
+/******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
+.navbar-right li:hover {
+  text-decoration: line-through;
+  color: #fff; }
+
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
 * {
   outline: 1px solid rgba(0, 255, 0, 0.3);
@@ -76,6 +82,126 @@ section {
   width: 70px;
   margin: 25px 0; }
 
+/******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
+.likes {
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  border: 2px solid #fff; }
+
+.likes i {
+  font-size: 30px; }
+
+.likes_about_me {
+  margin: 0 30px; }
+
+.likes_about_me h3 {
+  background: #fff;
+  color: #453cb3; }
+
+/*************timeliner***********/
+.timeline {
+  margin-top: 50px; }
+  .timeline::before {
+    content: '';
+    background: #C5CAE9;
+    width: 5px;
+    height: 95%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%); }
+
+.timeline-item {
+  width: 100%;
+  margin-bottom: 20px; }
+  .timeline-item:nth-child(even) .timeline-content {
+    float: right;
+    padding: 40px 30px 10px 30px; }
+    .timeline-item:nth-child(even) .timeline-content .date {
+      right: auto;
+      left: 0; }
+    .timeline-item:nth-child(even) .timeline-content::after {
+      content: '';
+      position: absolute;
+      border-style: solid;
+      width: 0;
+      height: 0;
+      top: 30px;
+      left: -15px;
+      border-width: 10px 15px 10px 0;
+      border-color: transparent #f5f5f5 transparent transparent; }
+  .timeline-item::after {
+    content: '';
+    display: block;
+    clear: both; }
+
+.timeline-content {
+  position: relative;
+  width: 45%;
+  padding: 10px 30px;
+  border-radius: 4px;
+  background: #f5f5f5;
+  box-shadow: 0 20px 25px -15px rgba(0, 0, 0, 0.3); }
+  .timeline-content::after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    right: -15px;
+    border-width: 10px 0 10px 15px;
+    border-color: transparent transparent transparent #f5f5f5; }
+
+.timeline-img {
+  width: 30px;
+  height: 30px;
+  background: #3F51B5;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  margin-top: 25px;
+  margin-left: -15px; }
+
+.timeline-card {
+  padding: 0 !important; }
+  .timeline-card p {
+    padding: 0 20px; }
+  .timeline-card a {
+    margin-left: 20px; }
+
+/******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
+.img_logo_skills {
+  width: 110px;
+  height: 110px;
+  display: inline-block;
+  border: 1px solid #fff; }
+
+.-html:hover {
+  background-color: #f9841f; }
+
+.-css:hover {
+  background-color: #076ff7; }
+
+.-js:hover {
+  background-color: #f7df1e; }
+
+.-jq:hover {
+  background-color: #78cff5; }
+
+.-boot:hover {
+  background-color: #644193; }
+
+.-sass:hover {
+  background-color: #cd669a; }
+
+.adicional_img {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 50px;
+  right: 0; }
+
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
 .menu-navigation-number {
   box-sizing: border-box;
@@ -111,13 +237,14 @@ section {
   margin: 25px; }
 
 .layer img {
-  transition: box-shadow 2s, transform 250ms, filter 250ms ease-in-out; }
+  transition: box-shadow 2s, transform 250ms, filter 250ms ease-in-out;
+  opacity: 0.6;
+  filter: alpha(opacity=80); }
 
 .layer img:hover {
-  transform: scale(1.02);
+  transform: scale(1.05);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6); }
 
-/******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome {
   background: url(../images/1rst%20demo%20city.jpeg); }
@@ -127,7 +254,7 @@ section {
   background: #fff;
   box-sizing: content-box;
   margin: 0 15px;
-  height: 120px; }
+  height: 130px; }
 
 .intro-header h1 {
   display: inline-block;
@@ -135,9 +262,10 @@ section {
   font-family: "Alegreya", "serif"; }
 
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
-@media screen and (max-width: 600px) {
+@media (max-width: 767px) {
   .middle-structure {
     width: 100%;
-    z-index: 3; } }
+    z-index: 3;
+    padding: 30px; } }
 
 /*# sourceMappingURL=main.css.map */
