--- a/css/main.css
+++ b/css/main.css
@@ -247,7 +247,11 @@ section {
 
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome {
-  background: url(../images/1rst%20demo%20city.jpeg); }
+  background: url(../images/1rst%20demo%20city.jpeg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100vh; }
 
 .vertical {
   width: 2px;
