--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ header {
   background: #fff; }
 
 section {
-  background: #000;
+  background: rgba(69, 60, 179, 0.5);
   /*background: rgba(0,0,0,0.3);*/
   position: absolute;
   top: 0;
@@ -87,7 +87,12 @@ section {
   width: 100px;
   height: 100px;
   line-height: 100px;
-  border: 2px solid #fff; }
+  border: 2px solid #fff;
+  transition: all .2s ease-in-out; }
+
+.likes:hover {
+  transform: scale(1.1);
+  background: #ff0; }
 
 .likes i {
   font-size: 30px; }
@@ -98,77 +103,6 @@ section {
 .likes_about_me h3 {
   background: #fff;
   color: #453cb3; }
-
-/*************timeliner***********/
-.timeline {
-  margin-top: 50px; }
-  .timeline::before {
-    content: '';
-    background: #C5CAE9;
-    width: 5px;
-    height: 95%;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%); }
-
-.timeline-item {
-  width: 100%;
-  margin-bottom: 20px; }
-  .timeline-item:nth-child(even) .timeline-content {
-    float: right;
-    padding: 40px 30px 10px 30px; }
-    .timeline-item:nth-child(even) .timeline-content .date {
-      right: auto;
-      left: 0; }
-    .timeline-item:nth-child(even) .timeline-content::after {
-      content: '';
-      position: absolute;
-      border-style: solid;
-      width: 0;
-      height: 0;
-      top: 30px;
-      left: -15px;
-      border-width: 10px 15px 10px 0;
-      border-color: transparent #f5f5f5 transparent transparent; }
-  .timeline-item::after {
-    content: '';
-    display: block;
-    clear: both; }
-
-.timeline-content {
-  position: relative;
-  width: 45%;
-  padding: 10px 30px;
-  border-radius: 4px;
-  background: #f5f5f5;
-  box-shadow: 0 20px 25px -15px rgba(0, 0, 0, 0.3); }
-  .timeline-content::after {
-    content: '';
-    position: absolute;
-    border-style: solid;
-    width: 0;
-    height: 0;
-    top: 30px;
-    right: -15px;
-    border-width: 10px 0 10px 15px;
-    border-color: transparent transparent transparent #f5f5f5; }
-
-.timeline-img {
-  width: 30px;
-  height: 30px;
-  background: #3F51B5;
-  border-radius: 50%;
-  position: absolute;
-  left: 50%;
-  margin-top: 25px;
-  margin-left: -15px; }
-
-.timeline-card {
-  padding: 0 !important; }
-  .timeline-card p {
-    padding: 0 20px; }
-  .timeline-card a {
-    margin-left: 20px; }
 
 /******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
 .img_logo_skills {
@@ -203,14 +137,9 @@ section {
   right: 0; }
 
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
-.menu-navigation-number {
-  box-sizing: border-box;
-  background: #fff;
-  color: #000; }
-
-.middle-structure-right {
-  background-color: #f2f2f2;
-  width: 50%;
+.middle-structure-projects {
+  background-color: #453cb3;
+  width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
@@ -218,17 +147,6 @@ section {
   display: table;
   overflow: hidden;
   color: #000; }
-
-.menu-navigation-number {
-  width: 60px;
-  margin: 0;
-  padding: 0; }
-
-.menu-navigation-number li {
-  padding: 30px 0; }
-
-.menu-navigation-number li:nth-child(1) {
-  margin-top: 0; }
 
 .projects li {
   padding: 30px 0; }
@@ -249,7 +167,8 @@ section {
 .welcome {
   background: url(../images/1rst%20demo%20city.jpeg);
   background-repeat: no-repeat;
-  background-position: center center;
+  background-size: cover;
+  background-position: center left;
   width: 100%;
   height: 100vh; }
 
@@ -264,6 +183,40 @@ section {
   display: inline-block;
   font-size: 45px;
   font-family: "Alegreya", "serif"; }
+
+/******+++++++++++++++++++++++CONTACT-ME***++++++++++++++++++***/
+.middle-structure-contacts {
+  background-color: #453cb3;
+  width: 33.33%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: table;
+  padding: 0 30px;
+  z-index: 5; }
+
+.middle-structure-center-contacts {
+  background-color: url(../images/web-developer.png);
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: table;
+  padding: 0 30px; }
+
+.middle-structure-right-contacts {
+  background-color: #453cb3;
+  width: 33.33%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: table;
+  padding: 0 30px; }
 
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
 @media (max-width: 767px) {
