--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,14 +3,6 @@ $absolute:absolute;
 $table:table;
 $table-cell:table-cell;
 $margin-titles: 100px 0;
-    /**********timeliner************/
-    $primary: #3F51B5;
-$dark-primary: #303F9F;
-$light-primary: #C5CAE9;
-$text: #FFFFFF;
-$primary-text: #212121;
-$secondary-text: #757575;
-$accent: #FF4081;
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 .navbar-right li:hover{
     text-decoration: line-through;
@@ -41,18 +33,27 @@ header{
 .info-projects{
     background: #fff;
 }
-section{
-    background: #000;
-    /*background: rgba(0,0,0,0.3);*/
+section, .middle-structure
+{
+    background: rgba(0,0,0,0.3);
     position: $absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;    
+    height: 100%;    
     opacity: 0;
     color: #fff;
 }
+/********width**********/
+section{
+    width: 100%;
+    display: none;
+}
+.middle-structure{
+    width: 50%;
+    display: $table;
+    padding: 0 30px;
+}
+
 .visible{
     display: $table;
     opacity: 1;
@@ -61,28 +62,7 @@ section{
     display: $table-cell;
     vertical-align: middle;
 }
-.middle-structure{
-    background-color: #f00;
-    width: 50%;
-    height: 100%;
-    position: $absolute;
-    top: 0;
-    left: 0;
-    display: $table;
-    padding: 0 30px;
-}
-.-about{
-    background: rgb(69,60,179);
-}
-.-skills{
-    background:  rgb(69,60,179);
-}
-.-projects{
-    background:  rgb(69,60,179);
-}
-.-contacts{
-    background:  rgb(69,60,179);
-}
+/**********************/
 .-about h2, .-skills h2, .-projects h2{
     font-family: "Abril Fatface";
     font-size: 50px;
@@ -99,6 +79,11 @@ section{
     height: 100px;
     line-height: 100px;
     border: 2px solid #fff;
+    transition: all .2s ease-in-out; 
+}
+.likes:hover{
+    transform: scale(1.1);
+    background: #ff0;
 }
 .likes i{
     font-size: 30px;
@@ -109,100 +94,6 @@ section{
 .likes_about_me h3{
     background: #fff;
     color: rgb(69,60,179);
-}
-    /*************timeliner***********/
-.timeline {
-    margin-top: 50px;
-	&::before {
-		content: '';
-		background: $light-primary;
-		width: 5px;
-		height: 95%;
-		position: absolute;
-		left: 50%;
-		transform: translateX(-50%);
-	}
-}
-
-.timeline-item {
-	width: 100%;
-	margin-bottom: 20px;
-
-	&:nth-child(even) {
-
-		.timeline-content {
-			float: right;
-			padding: 40px 30px 10px 30px;
-
-			.date {
-				right: auto;
-				left: 0;
-			}
-
-			&::after {
-				content: '';
-				position: absolute;
-				border-style: solid;
-				width: 0;
-				height: 0;
-				top: 30px;
-				left: -15px;
-				border-width: 10px 15px 10px 0;
-				border-color: transparent #f5f5f5 transparent transparent;
-			}
-		}
-	}
-
-	&::after {
-		content: '';
-		display: block;
-		clear: both;
-	}
-}
-
-
-.timeline-content {
-	position: relative;
-	width: 45%;
-	padding: 10px 30px;
-	border-radius: 4px;
-	background: #f5f5f5;
-	box-shadow: 0 20px 25px -15px rgba(0, 0, 0, .3);
-
-	&::after {
-		content: '';
-		position: absolute;
-		border-style: solid;
-		width: 0;
-		height: 0;
-		top: 30px;
-		right: -15px;
-		border-width: 10px 0 10px 15px;
-		border-color: transparent transparent transparent #f5f5f5;
-	}
-}
-
-.timeline-img {
-	width: 30px;
-	height: 30px;
-	background: $primary;
-	border-radius: 50%;
-	position: absolute;
-	left: 50%;
-	margin-top: 25px;
-	margin-left: -15px;
-}
-
-.timeline-card {
-	padding: 0!important;
-
-	p {
-		padding: 0 20px;
-	}
-
-	a {
-		margin-left: 20px;
-	}
 }
 
 /******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
@@ -230,40 +121,11 @@ section{
 .-sass:hover{
     background-color: rgb(205,102,154);
 }
-.adicional_img{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    bottom: 50px;
-    right: 0;
-}
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
-.menu-navigation-number{
-    box-sizing: border-box;
-    background:#fff; 
-    color:#000;
-}
-.middle-structure-right{
-    background-color: #f2f2f2;
-    width: 50%;
-    height: 100%;
-    position: $absolute;
-    top: 0;
-    right: 0;
+.middle-structure-projects{
+    width: 100%;
     display: $table;
-    overflow: hidden;
-    color: #000;
-}
-.menu-navigation-number{
-    width: 60px;
-    margin: 0;
-    padding: 0;
-}
-.menu-navigation-number li{
-    padding: 30px 0;
-}
-.menu-navigation-number li:nth-child(1){
-    margin-top: 0;
+    padding: 0 30px;
 }
 .projects li{
     padding: 30px 0;
@@ -284,10 +146,10 @@ section{
 .welcome{
     background: url(../images/1rst%20demo%20city.jpeg);
     background-repeat: no-repeat;
-    background-position: center center;
+    background-size: cover;
+    background-position: center left;
     width: 100%;
     height: 100vh;
-    
 }
 .vertical{
     width: 2px;
@@ -299,14 +161,29 @@ section{
 .intro-header h1{
     display: inline-block;
     font-size: 45px;
-    font-family: "Alegreya", "serif";
 }
+/******+++++++++++++++++++++++CONTACT-ME***++++++++++++++++++***/
+.middle-structure-contacts{
+    width: 33.33%;
+    display: $table;
+    padding: 0 30px;
+}
+.middle-structure-right-contacts{
+    width: 33.33%;
+    display: $table;
+    padding: 0 30px;
+}
+
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
 @media (max-width:767px)
 {
-    .middle-structure{
+    .middle-structure, .middle-structure-contacts{
         width: 100%;
         z-index: 3;
         padding: 30px;
-    } 
+    }
+    
 }
+
+
+
