--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
-/**********timeliner************/
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 .navbar-right li:hover {
   text-decoration: line-through;
@@ -32,7 +31,6 @@ header {
 
 section {
   background: rgba(69, 60, 179, 0.5);
-  /*background: rgba(0,0,0,0.3);*/
   position: absolute;
   top: 0;
   left: 0;
@@ -87,12 +85,7 @@ section {
   width: 100px;
   height: 100px;
   line-height: 100px;
-  border: 2px solid #fff;
-  transition: all .2s ease-in-out; }
-
-.likes:hover {
-  transform: scale(1.1);
-  background: #ff0; }
+  border: 2px solid #fff; }
 
 .likes i {
   font-size: 30px; }
@@ -137,9 +130,14 @@ section {
   right: 0; }
 
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
-.middle-structure-projects {
-  background-color: #453cb3;
-  width: 100%;
+.menu-navigation-number {
+  box-sizing: border-box;
+  background: #fff;
+  color: #000; }
+
+.middle-structure-right {
+  background-color: #f2f2f2;
+  width: 50%;
   height: 100%;
   position: absolute;
   top: 0;
@@ -147,6 +145,17 @@ section {
   display: table;
   overflow: hidden;
   color: #000; }
+
+.menu-navigation-number {
+  width: 60px;
+  margin: 0;
+  padding: 0; }
+
+.menu-navigation-number li {
+  padding: 30px 0; }
+
+.menu-navigation-number li:nth-child(1) {
+  margin-top: 0; }
 
 .projects li {
   padding: 30px 0; }
@@ -183,40 +192,6 @@ section {
   display: inline-block;
   font-size: 45px;
   font-family: "Alegreya", "serif"; }
-
-/******+++++++++++++++++++++++CONTACT-ME***++++++++++++++++++***/
-.middle-structure-contacts {
-  background-color: #453cb3;
-  width: 33.33%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: table;
-  padding: 0 30px;
-  z-index: 5; }
-
-.middle-structure-center-contacts {
-  background-color: url(../images/web-developer.png);
-  background-position: center center;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  display: table;
-  padding: 0 30px; }
-
-.middle-structure-right-contacts {
-  background-color: #453cb3;
-  width: 33.33%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: table;
-  padding: 0 30px; }
 
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
 @media (max-width: 767px) {
