--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,12 @@ section {
   width: 100px;
   height: 100px;
   line-height: 100px;
-  border: 2px solid #fff; }
+  border: 2px solid #fff;
+  transition: all .2s ease-in-out; }
+
+.likes:hover {
+  transform: scale(1.1);
+  background: #ff0; }
 
 .likes i {
   font-size: 30px; }
