--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,6 +91,11 @@ section{
     height: 100px;
     line-height: 100px;
     border: 2px solid #fff;
+    transition: all .2s ease-in-out; 
+}
+.likes:hover{
+    transform: scale(1.1);
+    background: #ff0;
 }
 .likes i{
     font-size: 30px;
