--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ section {
   vertical-align: middle; }
 
 .middle-structure {
-  background-color: #f00;
+  background-color: #453cb3;
   width: 50%;
   height: 100%;
   position: absolute;
@@ -58,6 +58,7 @@ section {
   display: table;
   padding: 0 30px; }
 
+/***********COLORES************/
 .-about {
   background: #453cb3; }
 
@@ -70,7 +71,8 @@ section {
 .-contacts {
   background: #453cb3; }
 
-.-about h2, .-skills h2, .-projects h2 {
+/***********COLORES************/
+.-about h2, .-skills h2, .-projects h2, .-contact h2 {
   font-family: "Abril Fatface";
   font-size: 50px;
   letter-spacing: 3px; }
@@ -176,6 +178,12 @@ section {
 .layer img:hover {
   transform: scale(1.05);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6); }
+
+/******+++++++++++++++++++++++CONTACT***++++++++++++++++++***/
+.-contact p {
+  font-size: 20px;
+  font-family: "Abril Fatface";
+  letter-spacing: 1.5; }
 
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome {
