--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
+.navbar-right li a {
+  color: #ff0; }
+
 .navbar-right li:hover {
-  text-decoration: line-through;
-  color: #fff; }
+  background-color: #fff;
+  color: #000; }
 
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
 * {
-  outline: 1px solid rgba(0, 255, 0, 0.3);
   font-family: "Montserrat"; }
 
 header {
@@ -180,10 +182,21 @@ section {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.6); }
 
 /******+++++++++++++++++++++++CONTACT***++++++++++++++++++***/
-.-contact p {
+.contact_phrase p {
   font-size: 20px;
   font-family: "Abril Fatface";
   letter-spacing: 1.5; }
+
+.contact-icon {
+  margin: 30px 0; }
+  .contact-icon i {
+    font-size: 30px;
+    color: royalblue; }
+  .contact-icon i:hover {
+    color: #fff; }
+  .contact-icon p {
+    font-weight: bold;
+    font-size: 20px; }
 
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome {
