--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,13 +4,15 @@ $table:table;
 $table-cell:table-cell;
 $margin-titles: 100px 0;
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
+.navbar-right li a{
+    color: #ff0;
+}
 .navbar-right li:hover{
-    text-decoration: line-through;
-    color:#fff;
+    background-color:#fff;
+    color: #000;
 }
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
 *{
-    outline: 1px solid rgba(0,255,0,0.3);
     font-family: "Montserrat";
 }
 header{
@@ -186,11 +188,27 @@ section{
     box-shadow: 1px 1px 8px rgba(0,0,0,0.6);
 }
 /******+++++++++++++++++++++++CONTACT***++++++++++++++++++***/
-.-contact p{
+.contact_phrase p{
     font-size: 20px;
     font-family: "Abril Fatface";
     letter-spacing: 1.5;
 }
+.contact-icon 
+{
+    margin: 30px 0;
+    i{
+        font-size: 30px;
+        color: royalblue;
+    }
+    i:hover{
+        color: #fff;
+    }
+    p{
+        font-weight: bold;
+        font-size: 20px;
+    }
+}
+
 /******+++++++++++++++++++++++STYLES***++++++++++++++++++***/
 .welcome{
     background: url(../images/1rst%20demo%20city.jpeg);
