--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
   color: #000; }
 
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
-* {
+body {
   font-family: "Montserrat"; }
 
 header {
@@ -60,21 +60,7 @@ section {
   display: table;
   padding: 0 30px; }
 
-/***********COLORES************/
-.-about {
-  background: #453cb3; }
-
-.-skills {
-  background: #453cb3; }
-
-.-projects {
-  background: #453cb3; }
-
-.-contacts {
-  background: #453cb3; }
-
-/***********COLORES************/
-.-about h2, .-skills h2, .-projects h2, .-contact h2 {
+.about-me h2, .-skills h2, .-projects h2, .contact-me {
   font-family: "Abril Fatface";
   font-size: 50px;
   letter-spacing: 3px; }
@@ -85,33 +71,40 @@ section {
   margin: 25px 0; }
 
 /******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
-.likes {
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
-  border: 2px solid #fff;
-  transition: all .2s ease-in-out; }
-
-.likes:hover {
-  transform: scale(1.1);
-  background: #ff0; }
-
-.likes i {
-  font-size: 30px; }
-
 .likes_about_me {
-  margin: 0 30px; }
-
-.likes_about_me h3 {
-  background: #fff;
-  color: #453cb3; }
+  margin: 40px 20px; }
+  .likes_about_me .likes {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    border: 2px solid #fff;
+    transition: all .2s ease-in-out; }
+  .likes_about_me .likes:hover {
+    transform: scale(1.1);
+    background: #ff0; }
+  .likes_about_me .likes i {
+    font-size: 30px; }
 
 /******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
-.img_logo_skills {
+.logo_programs {
+  border: 1px solid #fff;
+  padding-left: 45px; }
+
+.idiomas_skills {
+  border: 1px solid #fff; }
+  .idiomas_skills img {
+    width: 50px;
+    height: 50px;
+    margin: auto; }
+  .idiomas_skills div {
+    background: rgba(69, 60, 179, 0.5); }
+
+.img_logo_skills, .idiomas_skills div {
   width: 110px;
   height: 110px;
   display: inline-block;
-  border: 1px solid #fff; }
+  border: 1px solid #fff;
+  margin: 20px; }
 
 .-html:hover {
   background-color: #f9841f; }
@@ -130,13 +123,6 @@ section {
 
 .-sass:hover {
   background-color: #cd669a; }
-
-.adicional_img {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 50px;
-  right: 0; }
 
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
 .menu-navigation-number {
@@ -212,14 +198,21 @@ section {
   background: #fff;
   box-sizing: content-box;
   margin: 0 15px;
-  height: 130px; }
+  height: 170px; }
 
 .intro-header h1 {
   display: inline-block;
-  font-size: 45px;
-  font-family: "Alegreya", "serif"; }
+  font-size: 55px;
+  font-family: "Abril Fatface", "serif"; }
 
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
+@media (max-width: 870px) {
+  .likes_about_me .likes {
+    width: 80px;
+    height: 80px; }
+
+  .logo-programs {
+    padding: 0; } }
 @media (max-width: 767px) {
   .middle-structure {
     width: 100%;
