--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@ $absolute:absolute;
 $table:table;
 $table-cell:table-cell;
 $margin-titles: 100px 0;
+$color: rgb(69,60,179);
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 .navbar-right li a{
     color: #ff0;
@@ -12,7 +13,7 @@ $margin-titles: 100px 0;
     color: #000;
 }
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
-*{
+body{
     font-family: "Montserrat";
 }
 header{
@@ -64,21 +65,8 @@ section{
     display: $table;
     padding: 0 30px;
 }
-    /***********COLORES************/
-    .-about{
-        background: rgb(69,60,179);
-    }
-    .-skills{
-        background:  rgb(69,60,179);
-    }
-    .-projects{
-        background:  rgb(69,60,179);
-    }
-    .-contacts{
-        background:  rgb(69,60,179);
-    }
-    /***********COLORES************/
-.-about h2, .-skills h2, .-projects h2, .-contact h2{
+
+.about-me h2, .-skills h2, .-projects h2, .contact-me{
     font-family: "Abril Fatface";
     font-size: 50px;
     letter-spacing: 3px;
@@ -90,34 +78,45 @@ section{
 }
 
 /******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
-.likes{
+.likes_about_me{
+    margin: 40px 20px;
+    .likes{
     width: 100px;
     height: 100px;
     line-height: 100px;
     border: 2px solid #fff;
     transition: all .2s ease-in-out; 
-}
-.likes:hover{
+    }
+    .likes:hover{
     transform: scale(1.1);
     background: #ff0;
-}
-.likes i{
+    }
+    .likes i{
     font-size: 30px;
+    }
 }
-.likes_about_me{
-    margin: 0 30px;
-}
-.likes_about_me h3{
-    background: #fff;
-    color: rgb(69,60,179);
-}
-
 /******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
-.img_logo_skills{
+.logo_programs{
+    border: 1px solid #fff;
+    padding-left: 45px;
+}
+.idiomas_skills{
+    border: 1px solid #fff;
+    img{
+        width: 50px;
+        height: 50px;
+        margin: auto;
+    }
+    div{
+        background: rgba(69,60,179,0.5);
+    }
+}
+.img_logo_skills, .idiomas_skills div{
     width: 110px;
     height: 110px;
     display: inline-block;
     border: 1px solid #fff;
+    margin: 20px;
 }
 .-html:hover{
     background-color: #f9841f;
@@ -137,13 +136,7 @@ section{
 .-sass:hover{
     background-color: rgb(205,102,154);
 }
-.adicional_img{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    bottom: 50px;
-    right: 0;
-}
+
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
 .menu-navigation-number{
     box-sizing: border-box;
@@ -223,14 +216,36 @@ section{
     background: #fff;
     box-sizing: content-box;
     margin: 0 15px;
-    height: 130px
+    height: 170px;
 }
 .intro-header h1{
     display: inline-block;
-    font-size: 45px;
-    font-family: "Alegreya", "serif";
+    font-size: 55px;
+    font-family: "Abril Fatface", "serif";
 }
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
+@media (max-width:870px)
+{
+    .img_logo_skills{
+        
+    }
+}
+
+
+
+@media (max-width:870px)
+{
+    .likes_about_me{
+        .likes{
+            width: 80px;
+            height: 80px;
+        }
+    }
+    .logo-programs{
+        padding: 0;
+    }
+}
+
 @media (max-width:767px)
 {
     .middle-structure{
