--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,12 +5,23 @@ $table-cell:table-cell;
 $margin-titles: 100px 0;
 $color: rgb(69,60,179);
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
-.navbar-right li a{
-    color: #ff0;
+*{
+    
 }
-.navbar-right li:hover{
-    background-color:#fff;
-    color: #000;
+.navbar-gr img{
+    width: 150px;
+    height: 100px;
+}
+.nav_grace {
+    a{
+        color: #fff;
+        background-color: rgba(0,0,0,0.3);
+        margin-left: 5px;
+        padding: 0; 
+    }
+    a:hover{
+        color: #000;
+    }
 }
 /******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
 body{
@@ -19,7 +30,6 @@ body{
 header{
     position: relative;
     z-index: 100;
-    margin: 10px 0;
 }
 .btn_press{
    background-color: rgba(0,0,0,0.0);
@@ -27,10 +37,10 @@ header{
     border: 1px solid #fff;
     padding: 12px 15px;
     margin-left: 25px;
-}
-.btn_press:hover{
+    .btn_press:hover{
     background-color: #fff;
     color:rgba(69,60,179,0.9);
+    }
 }
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
 .info-projects{
@@ -56,7 +66,7 @@ section{
     vertical-align: middle;
 }
 .middle-structure{
-    background-color: rgb(69,60,179);
+    background-color: #7280b2;
     width: 50%;
     height: 100%;
     position: $absolute;
@@ -97,11 +107,9 @@ section{
 }
 /******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
 .logo_programs{
-    border: 1px solid #fff;
     padding-left: 45px;
 }
 .idiomas_skills{
-    border: 1px solid #fff;
     img{
         width: 50px;
         height: 50px;
@@ -138,6 +146,11 @@ section{
 }
 
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
+
+.display{
+   opacity: 1;
+   display:  table;
+}
 .menu-navigation-number{
     box-sizing: border-box;
     background:#fff; 
