--- a/css/main.css
+++ b/css/main.css
@@ -125,17 +125,13 @@ section {
   background-color: #cd669a; }
 
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
-.display {
-  opacity: 1;
-  display: table; }
-
 .menu-navigation-number {
   box-sizing: border-box;
-  background: #fff;
+  background: rgba(114, 128, 178, 0.5);
   color: #000; }
 
 .middle-structure-right {
-  background-color: #f2f2f2;
+  background: url(../images/back.png);
   width: 50%;
   height: 100%;
   position: absolute;
@@ -149,12 +145,10 @@ section {
   width: 60px;
   margin: 0;
   padding: 0; }
-
-.menu-navigation-number li {
-  padding: 30px 0; }
-
-.menu-navigation-number li:nth-child(1) {
-  margin-top: 0; }
+  .menu-navigation-number li {
+    padding: 30px 0; }
+  .menu-navigation-number li:nth-child(1) {
+    margin-top: 0; }
 
 .projects li {
   padding: 30px 0; }
