--- a/css/main.css
+++ b/css/main.css
@@ -37,12 +37,13 @@
 
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 .welcome {
-  background: url(../images/1rst%20demo%20city.jpeg);
+  background: url(../images/finished-city-wh-back.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center left;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  background-color: #000; }
 
 .vertical {
   width: 2px;
@@ -67,9 +68,6 @@
 
 /******+++++++++++++++++++++++SLIDER***++++++++++++++++++***/
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
-* {
-  outline: 1px solid rgba(0, 255, 0, 0.3); }
-
 .navbar-gr img {
   width: 150px;
   height: 100px; }
