--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,11 +1,13 @@
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 .welcome{
-    background: url(../images/1rst%20demo%20city.jpeg);
+    background: url(../images/finished-city-wh-back.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center left;
     width: 100%;
     height: 100vh;
+    background-color: #000;
+    
 }
 .vertical{
     width: 2px;
@@ -19,3 +21,4 @@
     font-size: 55px;
     font-family: "Abril Fatface", "serif";
 }
+
