--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,7 @@ section {
 
 .layer img {
   transition: box-shadow 2s, transform 250ms, filter 250ms ease-in-out;
+  opacity: 0.7;
   filter: alpha(opacity=80); }
 
 .layer img:hover {
