--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,13 @@ canvas {
   text-shadow: 3px 3px rgba(0, 0, 0, 0.3); }
 
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
+body {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%; }
+
 .structure-left, .middle-structure {
   width: 50%;
   height: 100%;
