--- a/css/main.css
+++ b/css/main.css
@@ -36,15 +36,6 @@
   visibility: hidden; }
 
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
-.welcome {
-  /*background: url(../images/finished-city-wh-back.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center left;
-  background-color: rgba(120,207,245,0.3);
-  overflow:hidden;
-  */ }
-
 .intro-header {
   position: absolute; }
 
@@ -70,13 +61,16 @@ canvas {
   background: #fff;
   box-sizing: content-box;
   margin: 0 15px;
-  height: 170px; }
+  height: 170px;
+  box-shadow: 3px 3px #3a36af; }
 
 .intro-header h1 {
   display: inline-block;
   font-size: 55px;
   font-family: "Abril Fatface", "serif";
-  text-shadow: 3px 3px rgba(0, 0, 0, 0.3); }
+  text-shadow: 5px 5px rgba(58, 54, 175, 0.9); }
+.intro-header h2 {
+  text-shadow: 3px 3px #3a36af; }
 
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
 body {
@@ -94,26 +88,22 @@ body {
   left: 0;
   display: table; }
 
-/******+++++++++++++++++++++++SLIDER***++++++++++++++++++***/
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 * {
-  outline: 1px solid rgba(0, 255, 0, 0.3); }
+  /*outline: 1px solid rgba(0,255,0,0.3);*/ }
 
 .navbar-gr img {
   width: 150px;
   height: 100px; }
 
-.nav_grace a {
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.3);
-  margin-left: 5px;
-  padding: 0; }
-.nav_grace a:hover {
-  color: #000; }
 .nav_grace li {
   cursor: pointer; }
+  .nav_grace li a {
+    color: #fff; }
+.nav_grace li:hover {
+  background: rgba(0, 220, 183, 0.7); }
 
-/******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
+/******+++++++++++++++++++++++GENeRAL***++++++++++++++++++***/
 body {
   font-family: "Montserrat"; }
 
@@ -121,22 +111,12 @@ header {
   position: relative;
   z-index: 100; }
 
-.btn_press {
-  background-color: transparent;
-  border-radius: none;
-  border: 1px solid #fff;
-  padding: 12px 15px;
-  margin-left: 25px; }
-  .btn_press .btn_press:hover {
-    background-color: #fff;
-    color: rgba(69, 60, 179, 0.9); }
-
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
 .info-projects {
   background: #fff; }
 
 section {
-  background: rgba(69, 60, 179, 0.3);
+  background: rgba(116, 95, 211, 0.5);
   position: absolute;
   top: 0;
   left: 0;
@@ -155,31 +135,32 @@ section {
   vertical-align: middle; }
 
 .middle-structure {
-  background-color: #7280b2;
+  background-color: #745fd3;
   padding: 0 30px; }
 
 .about-me h2, .-skills h2, .-projects h2, .-contact h2 {
   font-family: "Abril Fatface";
   font-size: 50px;
-  letter-spacing: 3px; }
+  letter-spacing: 3px;
+  text-shadow: 2px 2px rgba(0, 220, 183, 0.7); }
 
 .hor {
-  display: block;
-  width: 70px;
-  margin: 25px 0; }
+  width: 80px;
+  margin: 15px 0;
+  border: 2px solid rgba(0, 220, 183, 0.7); }
 
 /******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
 .likes_about_me {
   margin: 40px 20px; }
   .likes_about_me .likes {
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    border: 2px solid #fff;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    border: 3px solid rgba(0, 220, 183, 0.7);
     transition: all .2s ease-in-out; }
   .likes_about_me .likes:hover {
     transform: scale(1.1);
-    background: #ff0; }
+    background: rgba(0, 220, 183, 0.7); }
   .likes_about_me .likes i {
     font-size: 30px; }
 
@@ -187,18 +168,20 @@ section {
 .logo_programs {
   padding-left: 45px; }
 
-.idiomas_skills img {
-  width: 50px;
-  height: 50px;
-  margin: auto; }
-.idiomas_skills div {
-  background: rgba(69, 60, 179, 0.5); }
+.idiomas_skills {
+  margin-top: 70px; }
+  .idiomas_skills img {
+    width: 50px;
+    height: 50px;
+    margin: auto; }
+  .idiomas_skills div {
+    background: rgba(69, 60, 179, 0.5); }
 
 .box, .img_logo_skills, .idiomas_skills div {
   width: 110px;
   height: 110px;
   display: inline-block;
-  border: 1px solid #fff;
+  border: 1px solid rgba(0, 220, 183, 0.7);
   margin: 20px;
   padding: 10px; }
 
@@ -224,45 +207,48 @@ section {
   background-color: #cd669a; }
 
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
-.img_projects li {
-  width: 350px;
-  margin-top: 20px 0; }
+.img_projects {
+  width: 65%;
+  margin-top: 20px 0;
+  position: relative;
+  margin: 15px auto;
+  box-shadow: 3px solid rgba(0, 0, 0, 0.3); }
+  .img_projects img {
+    opacity: 0.7;
+    filter: alpha(opacity=80);
+    position: relative; }
 
-.menu-navigation-number {
-  box-sizing: border-box;
-  background: rgba(114, 128, 178, 0.5);
-  color: #000; }
+.info_enlace {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  text-align: center;
+  color: #eee;
+  background: rgba(0, 220, 183, 0.7);
+  -moz-transition: all linear 0.5s 0s;
+  -webkit-transition: all linear 0.5s 0s;
+  transition: all ease 0.5s 0s; }
+  .info_enlace div {
+    padding: 30px 0;
+    border: 1px solid #f2f2f2; }
+    .info_enlace div h3 {
+      font-weight: bold; }
+
+.img_projects:hover .info_enlace {
+  filter: alpha(opacity=100);
+  opacity: 1; }
 
 ._projects_total {
-  background: rgba(114, 128, 178, 0.9); }
+  background: #745fd3; }
 
-/*.middle-structure-right{
-    background: url(../images/back.png);
-    width: 50%;
-    height: 100%;
-    position: $absolute;
-    top: 0;
-    right: 0;
-    display: $table;
-    overflow: hidden;
-    color: #000;
-}
-.menu-navigation-number{
-    width: 60px;
-    margin: 0;
-    padding: 0;
-    li{
-    padding: 30px 0;
-    }
-    li:nth-child(1){
-    margin-top: 0;
-    }
-}*/
 .linea_projects {
-  width: 50%; }
-
-.img-projects-github {
-  margin: 25px; }
+  width: 50%;
+  border: 2px solid rgba(0, 220, 183, 0.7); }
 
 .layer img {
   transition: box-shadow 2s, transform 250ms, filter 250ms ease-in-out;
@@ -301,14 +287,41 @@ section {
 @media (max-width: 790px) {
   .middle-structure {
     width: 100%;
-    z-index: 3; } }
-@media (max-width: 530px) {
+    z-index: 3; }
+
+  .info_enlace {
+    padding: 0; }
+    .info_enlace div {
+      padding: 0;
+      border: none; } }
+@media (max-width: 414px) {
+  .middle-structure-info h2 {
+    margin-top: 100px; }
+
   .-projects h2 {
-    margin-top: 90px;
-    font-size: 35px;
-    width: 100px; } }
+    margin-top: 100px; }
+
+  .contact_phrase {
+    display: none; } }
 @media (max-width: 375px) {
   .vertical {
+    display: none; }
+
+  .img_projects img {
+    width: 350px; }
+
+  .languages_skills {
+    display: none; }
+
+  .-projects h2 {
+    font-size: 40px; }
+
+  .info-contact-me .middle-structure {
+    padding: 0; } }
+@media (max-width: 350px) {
+  .-contact h2 {
+    font-size: 40px; }
+  .-contact .control-label {
     display: none; } }
 
 /*# sourceMappingURL=main.css.map */
