--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@ $table:table;
 $table-cell:table-cell;
 $margin-titles: 100px 0;
 $color: rgb(69,60,179);
+$color_contraste:rgba(0,220,183,0.7);
 body{
     position: absolute;
     margin: 0;
@@ -21,31 +22,27 @@ body{
     left: 0;
     display: $table; 
 }
-/******+++++++++++++++++++++++SLIDER***++++++++++++++++++***/
 
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 *{
-  outline: 1px solid rgba(0,255,0,0.3);
+  /*outline: 1px solid rgba(0,255,0,0.3);*/
 }
 .navbar-gr img{
     width: 150px;
     height: 100px;
 }
 .nav_grace {
-    a{
-        color: #fff;
-        background-color: rgba(0,0,0,0.3);
-        margin-left: 5px;
-        padding: 0; 
-    }
-    a:hover{
-        color: #000;
-    }
     li{
-      cursor:pointer;
+        cursor:pointer;
+        a{
+            color: #fff;
+        }
+    }
+    li:hover{
+        background: $color_contraste;
     }
 }
-/******+++++++++++++++++++++++GENERAL***++++++++++++++++++***/
+/******+++++++++++++++++++++++GENeRAL***++++++++++++++++++***/
 body{
     font-family: "Montserrat";
 }
@@ -53,23 +50,13 @@ header{
     position: relative;
     z-index: 100;
 }
-.btn_press{
-   background-color: rgba(0,0,0,0.0);
-    border-radius: none;
-    border: 1px solid #fff;
-    padding: 12px 15px;
-    margin-left: 25px;
-    .btn_press:hover{
-    background-color: #fff;
-    color:rgba(69,60,179,0.9);
-    }
-}
+
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
 .info-projects{
     background: #fff;
 }
 section{
-    background: rgba(69,60,179,0.3);
+    background: rgba(116, 95, 211,0.5);
     position: $absolute;
     top: 0;
     left: 0;
@@ -90,7 +77,7 @@ section{
 
 .middle-structure{
     @extend .structure-left;
-    background-color: #7280b2;
+    background-color: rgb(116, 95, 211);
     padding: 0 30px;
 }
 
@@ -98,29 +85,30 @@ section{
     font-family: "Abril Fatface";
     font-size: 50px;
     letter-spacing: 3px;
+    text-shadow: 2px 2px $color_contraste;
 }
 .hor{
-    display: block;
-    width: 70px;
-    margin: 25px 0;
+    width: 80px;
+    margin: 15px 0;
+    border: 2px solid $color_contraste;
 }
 
 /******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
 .likes_about_me{
     margin: 40px 20px;
     .likes{
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    border: 2px solid #fff;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    border: 3px solid $color_contraste;
     transition: all .2s ease-in-out; 
     }
     .likes:hover{
     transform: scale(1.1);
-    background: #ff0;
+    background: $color_contraste;
     }
     .likes i{
-    font-size: 30px;
+    font-size: 30px;    
     }
 }
 /******+++++++++++++++++++++++SKILLS***++++++++++++++++++***/
@@ -128,6 +116,7 @@ section{
     padding-left: 45px;
 }
 .idiomas_skills{
+    margin-top: 70px;
     img{
         width: 50px;
         height: 50px;
@@ -141,7 +130,7 @@ section{
     width: 110px;
     height: 110px;
     display: inline-block;
-    border: 1px solid #fff;
+    border: 1px solid $color_contraste;
     margin: 20px;
     padding: 10px;
 }
@@ -175,49 +164,56 @@ section{
     background-color: rgb(205,102,154);
 }
 
+
 /******+++++++++++++++++++++++PROJECTS***++++++++++++++++++***/
 .img_projects{
-    li{
-        width: 350px;
+        width: 65%;
         margin-top: 20px 0;
+        position: relative;
+        margin: 15px auto;
+        box-shadow: 3px solid rgba(0,0,0,0.3);
+     img{
+        opacity: 0.7;
+        filter: alpha(opacity=80);
+        position: relative;   
     }
 }
-.menu-navigation-number{
-    box-sizing: border-box;
-    background:rgba(114, 128, 178,0.5); 
-    color:#000;
+
+.info_enlace{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    text-align: center;
+    color: #eee;
+    background: $color_contraste;
+    -moz-transition:all linear 0.5s 0s; 
+    -webkit-transition:all linear 0.5s 0s;
+    transition:all ease 0.5s 0s;
+    div{
+        padding: 30px 0;
+        border: 1px solid #f2f2f2;
+        h3{
+            font-weight: bold;
+        }
+    }
+}
+.img_projects:hover .info_enlace {
+filter: alpha(opacity=100);
+opacity:1;
 }
 ._projects_total{
-    background:rgba(114, 128, 178,0.9);
+    background:rgb(116, 95, 211);
 }
-/*.middle-structure-right{
-    background: url(../images/back.png);
-    width: 50%;
-    height: 100%;
-    position: $absolute;
-    top: 0;
-    right: 0;
-    display: $table;
-    overflow: hidden;
-    color: #000;
-}
-.menu-navigation-number{
-    width: 60px;
-    margin: 0;
-    padding: 0;
-    li{
-    padding: 30px 0;
-    }
-    li:nth-child(1){
-    margin-top: 0;
-    }
-}*/
 .linea_projects{
-   width: 50%; 
+   width: 50%;
+    border: 2px solid $color_contraste;
 }
-.img-projects-github{
-    margin: 25px;
-}
+
 .layer img{
     transition:box-shadow 2s, transform 250ms, filter 250ms ease-in-out;
     opacity: 0.7;
@@ -277,21 +273,62 @@ section{
     .middle-structure{
         width: 100%;
         z-index: 3; 
-    } 
+    }
+     .info_enlace{
+            padding: 0;
+        div{
+            padding: 0;
+            border: none;
+        }
+    }
 }
 
-@media (max-width:530px){
-    .-projects{
+@media (max-width:414px){
+    .middle-structure-info{
         h2{
-           margin-top: 90px;
-            font-size: 35px;
-            width: 100px;
-            
+           margin-top: 100px;
+                
         }
+    }
+    .-projects h2{
+        margin-top: 100px;
+         
+    }
+    .contact_phrase{
+        display: none;
     }
 }
 @media (max-width:375px){
     .vertical{
       display: none;
     }
+    .img_projects{
+            img{
+                width: 350px;
+            }
+        
+    }
+    .languages_skills{
+        display: none;
+    }
+    .-projects h2{
+        font-size: 40px;
+         
+    }
+     .info-contact-me{
+        .middle-structure{
+            padding:0;
+        }
+    }
+}
+@media (max-width:350px){
+    .-contact{
+        h2{
+           font-size: 40px; 
+        }
+        .control-label{
+        display: none;
+        }
+    }
+    
 }
