--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,8 @@ $table-cell:table-cell;
 $margin-titles: 100px 0;
 $color: rgb(69,60,179);
 $color_contraste:rgba(0,220,183,0.7);
+$color_nav:rgb(55,174,168);
+$color_princ:rgba(116, 95, 211,0.7);
 body{
     position: absolute;
     margin: 0;
@@ -27,19 +29,40 @@ body{
 *{
   /*outline: 1px solid rgba(0,255,0,0.3);*/
 }
-.navbar-gr img{
+.navbar-gr {
+    background: $color_nav;
+    img{
     width: 150px;
     height: 100px;
+    }
+    button{
+        background: $color_princ;
+        .icon-bar{
+            background: #fff;
+        }
+    }
+    a{text-decoration: none;
+        h4{
+        margin-top: 7px;
+        color: #fff;
+        font-weight: bold;
+        cursor:pointer;
+        } 
+    
+    }
 }
+
 .nav_grace {
+    
+    color: #fff;
     li{
         cursor:pointer;
         a{
             color: #fff;
         }
-    }
-    li:hover{
-        background: $color_contraste;
+        a:hover{
+            background-color: $color_princ;
+        }
     }
 }
 /******+++++++++++++++++++++++GENeRAL***++++++++++++++++++***/
@@ -49,6 +72,16 @@ body{
 header{
     position: relative;
     z-index: 100;
+}
+.img_content{
+    .logo_central{
+    width: 6%;
+    position: absolute;
+    left: 44%;
+    top: 110px;
+     opacity: 0.4;
+    filter: alpha(opacity=70);
+    }
 }
 
 /******+++++++++++++++++++++++STRUCTURE***++++++++++++++++++***/
