--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,7 +30,7 @@ body{
   /*outline: 1px solid rgba(0,255,0,0.3);*/
 }
 .navbar-gr {
-    background: $color_nav;
+        margin-top:13px; 
     img{
     width: 150px;
     height: 100px;
