change color principal

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body {
     width: 150px;
     height: 100px; }
   .navbar-gr button {
-    background: rgba(116, 95, 211, 0.7); }
+    background: rgba(76, 76, 150, 0.7); }
     .navbar-gr button .icon-bar {
       background: #fff; }
   .navbar-gr a {
@@ -116,7 +116,7 @@ body {
     .nav_grace li a {
       color: #fff; }
     .nav_grace li a:hover {
-      background-color: rgba(116, 95, 211, 0.7); }
+      background-color: rgba(76, 76, 150, 0.7); }
 
 /******+++++++++++++++++++++++GENeRAL***++++++++++++++++++***/
 body {
@@ -130,7 +130,7 @@ header {
   width: 6%;
   position: absolute;
   left: 44%;
-  top: 110px;
+  top: 135px;
   opacity: 0.4;
   filter: alpha(opacity=70); }
 
@@ -158,7 +158,7 @@ section {
   vertical-align: middle; }
 
 .middle-structure {
-  background-color: #745fd3;
+  background-color: #4c4c96;
   padding: 0 30px; }
 
 .about-me h2, .-skills h2, .-projects h2, .-contact h2 {
@@ -267,7 +267,7 @@ section {
   opacity: 1; }
 
 ._projects_total {
-  background: #745fd3; }
+  background: #4c4c96; }
 
 .linea_projects {
   width: 50%;
