--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,13 +27,13 @@ body{
 
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 *{
-  /*outline: 1px solid rgba(0,255,0,0.3);*/
+  outline: 1px solid rgba(0,255,0,0.3);
 }
 .navbar-gr {
-        margin-top:13px; 
+    margin-top:13px; 
     img{
-    width: 150px;
-    height: 100px;
+        width: 150px;
+        height: 100px;
     }
     button{
         background: $color_princ;
@@ -43,12 +43,11 @@ body{
     }
     a{text-decoration: none;
         h4{
-        margin-top: 7px;
+        margin-top: 15px;
         color: #fff;
         font-weight: bold;
         cursor:pointer;
         } 
-    
     }
 }
 
@@ -148,7 +147,7 @@ section{
     padding-left: 45px;
 }
 .idiomas_skills{
-    margin-top: 70px;
+    margin-top: 100px;
     img{
         width: 50px;
         height: 50px;
@@ -255,17 +254,13 @@ opacity:1;
     transform: scale(1.05);
     box-shadow: 1px 1px 8px rgba(0,0,0,0.6);
     
-    }
+}
 
 /******+++++++++++++++++++++++CONTACT***++++++++++++++++++***/
-.contact_phrase p{
-    font-size: 30px;
-    font-family: "Abril Fatface";
-    font-style: italic;
-    letter-spacing: 1.5;
-}
-.contact-icon 
-{
+.-contact{
+    margin: auto;
+    .contact-icon 
+    {
     margin: 30px 0;
     i{
         font-size: 35px;
@@ -277,10 +272,21 @@ opacity:1;
     p{
         font-weight: bold;
         font-size: 20px;
+        }
+    }
+    .contact_phrase{
+        p{
+        font-size: 30px;
+        font-family: "Abril Fatface";
+        font-style: italic;
+        letter-spacing: 1.5;
+        }    
+    }
+    button{
+        background-color: $color_contraste;
+        margin-left: 100px;
     }
 }
-
-
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
 @media (max-width:870px)
 {
