--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,8 +27,7 @@ body{
 
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 *{
-  /*outline: 1px solid rgba(0,255,0,0.3);*/
-}
+    /*outline: 1px solid rgba(0,255,0,0.3);*/}
 .navbar-gr {
     margin-top:13px; 
     img{
@@ -42,12 +41,16 @@ body{
         }
     }
     a{text-decoration: none;
-        h4{
+        h3{
         margin-top: 15px;
         color: #fff;
         font-weight: bold;
         cursor:pointer;
-        } 
+        text-shadow: 2px 2px rgba(58,54,175,0.9);
+        }
+        h3:hover{
+            background: $color_contraste;
+        }
     }
 }
 
@@ -65,7 +68,7 @@ body{
 }
 /******+++++++++++++++++++++++GENeRAL***++++++++++++++++++***/
 body{
-    font-family: "Montserrat";
+    font-family: "Raleway";
 }
 header{
     position: relative;
@@ -116,7 +119,6 @@ section{
     font-family: "Abril Fatface";
     font-size: 50px;
     letter-spacing: 3px;
-    text-shadow: 2px 2px $color_contraste;
 }
 .hor{
     width: 80px;
@@ -327,6 +329,13 @@ opacity:1;
         h2{
            margin-top: 100px;
                 
+        }
+    }
+    .navbar-gr{
+        a{
+            h3{
+                margin-left: 30px;
+            }
         }
     }
     .-projects h2{
