--- a/sass/style.scss
+++ b/sass/style.scss
@@ -127,6 +127,9 @@ section{
 }
 
 /******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
+.cv_grace{
+    margin-top: 25px;
+}
 .likes_about_me{
     margin: 40px 20px;
     .likes{
